unpackaged/main/default/objects/litify_pm__Questionnaire_Output__c/litify_pm__Questionnaire_Output__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Output</label>
    <nameField>
        <label>QuestionnaireOutput Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Output</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>