unpackaged/main/default/objects/litify_pm__Questionnaire_Output__c/fields/litify_pm__History__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__History__c</fullName>
    <label>History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>