unpackaged/main/default/objects/litify_pm__Questionnaire_Output__c/fields/litify_pm__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the questionnaire has been completed</description>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>