unpackaged/main/default/objects/litify_pm__Questionnaire_Output__c/fields/litify_pm__Next_Question_Node__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Next_Question_Node__c</fullName>
    <label>Next Question Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>