unpackaged/main/default/objects/litify_pm__Questionnaire_Output__c/fields/litify_pm__Responses__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Responses__c</fullName>
    <label>Responses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>