unpackaged/main/default/objects/litify_pm__Questionnaire_Output__c/fields/litify_pm__Triggered_Case_Qualify_Criteria__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Triggered_Case_Qualify_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is to set a case qualify criteria if triggered</description>
    <label>Triggered Case Qualify Criteria</label>
    <referenceTo>litify_pm__Case_Qualify_Criteria__c</referenceTo>
    <relationshipLabel>Questionnaire Output</relationshipLabel>
    <relationshipName>Questionnaire_Output</relationshipName>
    <type>Lookup</type>
</CustomField>